--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Hero Section -->
     <section class="bg-blue-700 text-white py-16">
       <div class="max-w-6xl mx-auto px-4 text-center">
-        <h2 class="text-4xl font-extrabold">Welcome to My Portfolio</h2>
+        <h2 class="text-4xl font-extrabold">Welcome to My Portfolio Site</h2>
         <p class="mt-4 text-lg">I'm Durant, a passionate software developer.</p>
       </div>
     </section>
