--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Durant</title>
   </head>
-  <body class="bg-gray-800 text-white font-sans leading-normal tracking-normal">
+  <body class="bg-gray-800 text-white font-sans leading-normal tracking-normal m-2">
 
     <!-- Navigation -->
     <header class="bg-blue-600 text-white py-4">
-      <div class="max-w-6xl mx-auto px-4 flex justify-between items-center">
+      <div class="max-w-6xl mx-auto px-4 flex justify-between items-center text-center">
         <h1 class="text-2xl font-bold">Durant's Portfolio</h1>
         <nav>
-          <ul class="flex space-x-6">
+          <ul class="flex space-x-6 justify-center">
             <li><a href="#about" class="hover:text-gray-200">About</a></li>
             <li><a href="#projects" class="hover:text-gray-200">Projects</a></li>
             <li><a href="#contact" class="hover:text-gray-200">Contact</a></li>
@@ -24,8 +24,8 @@
     </header>
   
     <!-- Hero Section -->
-    <section class="bg-blue-700 text-white py-16">
-      <div class="max-w-6xl mx-auto px-4 text-center">
+    <section class="bg-blue-700 text-white py-16 text-center">
+      <div class="max-w-6xl mx-auto px-4">
         <h2 class="text-6xl font-extrabold">Welcome to My Portfolio Site</h2>
         <p class="mt-4 text-lg">I'm Durant, a passionate software developer.</p>
       </div>
@@ -35,14 +35,14 @@
     <section id="about" class="py-16 px-4 mx-auto text-center">
       <div class="max-w-6xl mx-auto">
         <h3 class="text-5xl font-semibold">About Me</h3>
-        <p class="mt-4 text-lg">I specialize in full-stack web development and have a deep passion for building scalable applications...</p>
+        <p class="mt-4 text-lg">I specialize in full-stack web development and have a deep passion for building scalable applications. I am proficient in MySQL, Python, C++, and Amazon Web Services (AWS) Foundational Products, with years of experience in data analysis, software development, and cloud computing. I am skilled in using data-driven decision-making, building scalable applications, and implementing automation in cloud environments. Experienced in developing solutions that improve operational efficiency and data accuracy. I am passionate in pursuing Information Technology - Computer Programming and getting hands-on experience in data structures, database management, and web development.</p>
       </div>
     </section>
   
     <!-- Projects Section -->
-    <section id="projects" class="bg-gray-700 py-16 px-4">
+    <section id="projects" class="bg-gray-700 py-16 px-4 text-center">
       <div class="max-w-6xl mx-auto">
-        <h3 class="text-3xl font-semibold text-center text-white">Projects</h3>
+        <h3 class="text-3xl font-semibold text-white">Projects</h3>
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
           <div class="bg-white p-6 rounded-lg shadow-lg">
             <h4 class="text-xl font-bold">Project 1</h4>
@@ -61,13 +61,13 @@
     </section>
   
     <!-- Contact Section -->
-    <section id="contact" class="py-16 bg-gray-800 px-4">
-      <div class="max-w-6xl mx-auto text-center">
+    <section id="contact" class="py-16 bg-gray-800 text-center px-4">
+      <div class="max-w-6xl mx-auto">
         <h3 class="text-3xl font-semibold">Contact</h3>
         <p class="mt-4 text-lg text-white">Feel free to reach out to me!</p>
-        <form class="mt-8 space-y-6">
-          <input type="email" class="w-full p-3 border border-gray-300 rounded" placeholder="Your Email">
-          <textarea class="w-full p-3 border border-gray-300 rounded" placeholder="Your Message"></textarea>
+        <form class="mt-8 space-y-6 mx-auto">
+          <input type="email" class="w-full p-3 border border-gray-300 rounded mb-4" placeholder="Your Email">
+          <textarea class="w-full p-3 border border-gray-300 rounded mb-4" placeholder="Your Message"></textarea>
           <button type="submit" class="w-full bg-blue-600 text-white py-3 rounded">Send Message</button>
         </form>
       </div>
