Revert "This is the big one 🤞🏾"
This reverts commit 31e4c8b2b0e53835c391d7c302a0acbbaa9f5eda.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
           <div class="bg-white p-6 rounded-lg shadow-lg">
             <h4 class="text-xl font-bold">Project 1</h4>
-            <p class="mt-2 text-gray-600">Look where you are... YES, my Durantmr.dev website that you are currently on is my first large project. I have used HTML, Tailwindcss, Vite with React, JS with emailJS, and this has been a fun journey. Please try to enjoy the visual. 👍🏾</p>
+            <p class="mt-2 text-gray-600">Description of project 1...</p>
           </div>
           <div class="bg-white p-6 rounded-lg shadow-lg">
             <h4 class="text-xl font-bold">Project 2</h4>
