--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <form id="contact-form" class="mt-8 space-y-6 max-w-6xl mx-auto" onsubmit="handleFormSubmit(event)"></form>
           <input type="email" id="user_email" class="w-full p-3 border border-gray-300 rounded mb-4" placeholder="Your Email">
           <textarea id="user_message" class="w-full p-3 border border-gray-300 rounded mb-4" placeholder="Your Message"></textarea>
-          <button type="submit" id="send-message-btn" class="w-full bg-blue-600 text-white py-3 rounded">Send Message</button>
+          <button type="submit" id="submit" class="w-full bg-blue-600 text-white py-3 rounded">Send Message</button>
         </form>
       </div>
     </section>
