--- a/index.html
+++ b/index.html
@@ -169,12 +169,12 @@
       <div class="max-w-6xl mx-auto">
         <h3 class="text-3xl font-semibold">Contact</h3>
         <p class="mt-4 text-lg text-white">Feel free to reach out to me!</p>
-        <form id="contact-form" class="mt-8 space-y-6 max-w-6xl mx-auto" onsubmit="sendMail(event)"></form>
+        <form id="contact-form" class="mt-8 space-y-6 max-w-6xl mx-auto"></form>
           <input type="text" id="name" class="w-full p-3 border border-gray-300 rounded mb-4" placeholder="Your Name">
           <input type="email" id="email" class="w-full p-3 border border-gray-300 rounded mb-4" placeholder="Your Email">
           <input type="text" id="subject" class="w-full p-3 border border-gray-300 rounded mb-4" placeholder="Subject" required />
           <textarea id="message" class="w-full p-3 border border-gray-300 rounded mb-4" placeholder="Your Message"></textarea>
-          <button type="submit" id="submit" class="w-full bg-blue-600 text-white py-3 rounded">Send Message</button>
+          <button type="submit" id="submit" onclick="sendMail(event)" class="w-full bg-blue-600 text-white py-3 rounded">Send Message</button>
         </form>
       </div>
     </section>
